# Kilobot-simArgos-and-real

./: .gitignore  Analyze_results.py  README.md  analyze_comm_range.py  convert_all_datas.sh  convert_all_datas_real.sh  convert_data.py  convert_data_real.py  generate_configs.py  interesting_folders_comm_params.tsv  interesting_folders_initial.tsv  interesting_folders_without_initial.tsv  launch_multiple_argos.sh  launch_multiple_argos_10.sh  launch_multiple_argos_20.sh  launch_multiple_argos_30.sh  launch_multiple_argos_5_50_100.sh  output.xml  setup.py
analyze_scripts/: Analyze_results.py  Analyze_results_old.py  Analyze_speed.py  analyze_bias.py  analyze_comm_range.py  analyze_initial_distance.py  analyze_results.py  analyze_wmsd.py  boxplot_convergence_time.py  compare_average_first_passage_time.py  compare_first_passage_times.py  compare_wmsd.py
conversion_scripts/: README.md  convert_all_data.py  convert_data.py
experiments_s=10/20180606_robots=10_alpha=2.0_rho=0.90_experiments/: 20180606-11:38:49-38_90183_comm_range.tsv  20180606-11:38:49-38_90183_config.tsv  20180606-11:38:49-38_90183_displacement.tsv  20180606-11:38:49-38_90183_position.tsv  20180606-11:38:49-38_90183_time_results.tsv  20180606-11:38:51-38_47295_comm_range.tsv  20180606-11:38:51-38_47295_config.tsv  20180606-11:38:51-38_47295_displacement.tsv  20180606-11:38:51-38_47295_position.tsv  20180606-11:38:51-38_47295_time_results.tsv  20180606-11:38:53-38_71964_config.tsv  20180606-11:38:53-38_71964_displacement.tsv  20180606-11:38:53-38_71964_position.tsv  20180606-11:38:54-38_89157_comm_range.tsv  20180606-11:38:54-38_89157_config.tsv  20180606-11:38:54-38_89157_displacement.tsv  20180606-11:38:54-38_89157_position.tsv  20180606-11:38:54-38_89157_time_results.tsv  20180606-11:38:55-38_75918_comm_range.tsv  20180606-11:38:55-38_75918_config.tsv  20180606-11:38:55-38_75918_displacement.tsv  20180606-11:38:55-38_75918_position.tsv  20180606-11:38:55-38_75918_time_results.tsv  20180606-11:38:56-38_24668_comm_range.tsv  20180606-11:38:56-38_24668_config.tsv  20180606-11:38:56-38_24668_displacement.tsv  20180606-11:38:56-38_24668_position.tsv  20180606-11:38:56-38_24668_time_results.tsv  20180606-11:39:10-39_52282_comm_range.tsv  20180606-11:39:10-39_52282_config.tsv  20180606-11:39:10-39_52282_displacement.tsv  20180606-11:39:10-39_52282_position.tsv  20180606-11:39:10-39_52282_time_results.tsv  20180606-11:39:11-39_33203_comm_range.tsv  20180606-11:39:11-39_33203_config.tsv  20180606-11:39:11-39_33203_displacement.tsv  20180606-11:39:11-39_33203_position.tsv  20180606-11:39:11-39_33203_time_results.tsv  20180606-11:39:12-39_36998_comm_range.tsv  20180606-11:39:12-39_36998_config.tsv  (+456 more)
experiments_s=10/20180606_robots=20_alpha=2.0_rho=0.90_experiments/: 20180606-11:39:16-39_47286_comm_range.tsv  20180606-11:39:16-39_47286_config.tsv  20180606-11:39:16-39_47286_displacement.tsv  20180606-11:39:16-39_47286_position.tsv  20180606-11:39:16-39_47286_time_results.tsv  20180606-11:39:17-39_78308_comm_range.tsv  20180606-11:39:17-39_78308_config.tsv  20180606-11:39:17-39_78308_displacement.tsv  20180606-11:39:17-39_78308_position.tsv  20180606-11:39:17-39_78308_time_results.tsv  20180606-11:39:17-39_96167_comm_range.tsv  20180606-11:39:20-39_328_config.tsv  (+483 more)
scripts/: convert_all_datas.sh  run_experiments.sh
simulation_config/: kilobot_generic_controller.argos  kilobot_generic_controller_viz.argos  kilobot_rw_gui.argos  kilobot_sim_10.argos  kilobot_sim_10_2_04.argos  kilobot_sim_10_2_05.argos  kilobot_sim_10_2_06.argos  kilobot_sim_10_2_07.argos  kilobot_sim_10_2_08.argos  kilobot_sim_10_2_09.argos  kilobot_sim_20.argos  kilobot_sim_20_2_04.argos  kilobot_sim_20_2_05.argos  kilobot_sim_20_2_06.argos  kilobot_sim_20_2_07.argos  kilobot_sim_20_2_08.argos  kilobot_sim_20_2_09.argos  kilobot_sim_30.argos  kilobot_sim_30_2_04.argos  kilobot_sim_30_2_05.argos  kilobot_sim_30_2_06.argos  kilobot_sim_30_2_07.argos  kilobot_sim_30_2_08.argos  kilobot_sim_30_2_09.argos  kilobot_with_generic_controller.argos
src/: CMakeLists.txt  README.md  generate_config_visual.py  generate_configs.py
src/behaviors/: CMakeLists.txt  CRWLEVY.c  CRWLEVY_a2r0,4.c  CRWLEVY_a2r0,5.c  CRWLEVY_a2r0,6.c  CRWLEVY_a2r0,7.c  CRWLEVY_a2r0,8.c  CRWLEVY_a2r0,9.c  Target.c
tracking/: README.md
(+2016 files in other folders)
